fix: corregir errores de estilo y linting según Ruff
- Reemplazar "números mágicos" con constantes descriptivas
- Corregir longitudes de línea en documentación
- Mover las importaciones al principio de las celdas
- Renombrar variables de bucle no utilizadas
- Reducir complejidad ciclomática en función predict
- Aplicar formato consistente a comparaciones de valores

Los cambios mejoran la mantenibilidad y legibilidad del código
según los estándares de PEP 8.

--- a/notebooks/data_download.ipynb
+++ b/notebooks/data_download.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "# librerías base para data science\n",
     "from pathlib import Path\n",
+    "\n",
     "import pandas as pd"
    ]
   },
@@ -693,19 +694,44 @@
    ],
    "source": [
     "# Lista de columnas específicas a analizar\n",
-    "primera_mitad = ['MonthlyCharges', 'data_source', 'xml', 'StreamingMovies', 'Partner',\n",
-    "       'value', 'PhoneService', 'InternetService', 'StreamingTV',\n",
-    "       'OnlineSecurity', 'PaymentMethod ', 'MultipleLines', 'Dependents',\n",
-    "       'DeviceProtection', 'OnlineSecurity ', 'SeniorCitizen']\n",
-    "segunda_mitad= ['TotalCharges',\n",
-    "       'TechSupport', 'gender ', 'PaperlessBilling', 'gender', 'tenure',\n",
-    "       'Churn','Churn ', 'OnlineBackup', 'PaymentMethod', 'Contract', 'customerID']\n",
+    "primera_mitad = [\n",
+    "    \"MonthlyCharges\",\n",
+    "    \"data_source\",\n",
+    "    \"xml\",\n",
+    "    \"StreamingMovies\",\n",
+    "    \"Partner\",\n",
+    "    \"value\",\n",
+    "    \"PhoneService\",\n",
+    "    \"InternetService\",\n",
+    "    \"StreamingTV\",\n",
+    "    \"OnlineSecurity\",\n",
+    "    \"PaymentMethod \",\n",
+    "    \"MultipleLines\",\n",
+    "    \"Dependents\",\n",
+    "    \"DeviceProtection\",\n",
+    "    \"OnlineSecurity \",\n",
+    "    \"SeniorCitizen\",\n",
+    "]\n",
+    "segunda_mitad = [\n",
+    "    \"TotalCharges\",\n",
+    "    \"TechSupport\",\n",
+    "    \"gender \",\n",
+    "    \"PaperlessBilling\",\n",
+    "    \"gender\",\n",
+    "    \"tenure\",\n",
+    "    \"Churn\",\n",
+    "    \"Churn \",\n",
+    "    \"OnlineBackup\",\n",
+    "    \"PaymentMethod\",\n",
+    "    \"Contract\",\n",
+    "    \"customerID\",\n",
+    "]\n",
     "\n",
     "# crear los subdatasets\n",
     "df_subset1 = churn_df[primera_mitad]\n",
     "df_subset2 = churn_df[segunda_mitad]\n",
     "\n",
-    "#obtener la información de la primera mitad de las columnas\n",
+    "# obtener la información de la primera mitad de las columnas\n",
     "df_subset1.info()\n",
     "df_subset1.sample(5)"
    ]
@@ -734,7 +760,7 @@
     }
    ],
    "source": [
-    "churn_df['Churn'].equals(churn_df['Churn '])"
+    "churn_df[\"Churn\"].equals(churn_df[\"Churn \"])"
    ]
   },
   {
@@ -754,7 +780,7 @@
     }
    ],
    "source": [
-    "churn_df['OnlineSecurity'].equals(churn_df['OnlineSecurity '])"
+    "churn_df[\"OnlineSecurity\"].equals(churn_df[\"OnlineSecurity \"])"
    ]
   },
   {
@@ -774,7 +800,7 @@
     }
    ],
    "source": [
-    "churn_df['PaymentMethod'].equals(churn_df['PaymentMethod '])"
+    "churn_df[\"PaymentMethod\"].equals(churn_df[\"PaymentMethod \"])"
    ]
   },
   {
@@ -794,7 +820,7 @@
     }
    ],
    "source": [
-    "churn_df['gender'].equals(churn_df['gender '])"
+    "churn_df[\"gender\"].equals(churn_df[\"gender \"])"
    ]
   },
   {
@@ -971,7 +997,7 @@
     }
    ],
    "source": [
-    "#obtener la información de la segunda mitad de las columnas\n",
+    "# obtener la información de la segunda mitad de las columnas\n",
     "df_subset2.info()\n",
     "df_subset2.sample(5)"
    ]
@@ -982,14 +1008,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Reseleccionar cuales columnas utilizar eliminando las duplicadas o nulas\n",
+    "# Reseleccionar cuales columnas utilizar eliminando las duplicadas o nulas\n",
     "columns_to_use = [\n",
-    "        'customerID','MonthlyCharges', 'data_source', 'StreamingMovies', 'Partner',\n",
-    "       'value', 'PhoneService', 'InternetService', 'StreamingTV',\n",
-    "       'OnlineSecurity', 'PaymentMethod', 'MultipleLines', 'Dependents',\n",
-    "       'DeviceProtection', 'SeniorCitizen', 'TotalCharges',\n",
-    "       'TechSupport', 'gender ', 'PaperlessBilling', 'tenure', \n",
-    "       'OnlineBackup', 'Contract','Churn'\n",
+    "    \"customerID\",\n",
+    "    \"MonthlyCharges\",\n",
+    "    \"data_source\",\n",
+    "    \"StreamingMovies\",\n",
+    "    \"Partner\",\n",
+    "    \"value\",\n",
+    "    \"PhoneService\",\n",
+    "    \"InternetService\",\n",
+    "    \"StreamingTV\",\n",
+    "    \"OnlineSecurity\",\n",
+    "    \"PaymentMethod\",\n",
+    "    \"MultipleLines\",\n",
+    "    \"Dependents\",\n",
+    "    \"DeviceProtection\",\n",
+    "    \"SeniorCitizen\",\n",
+    "    \"TotalCharges\",\n",
+    "    \"TechSupport\",\n",
+    "    \"gender \",\n",
+    "    \"PaperlessBilling\",\n",
+    "    \"tenure\",\n",
+    "    \"OnlineBackup\",\n",
+    "    \"Contract\",\n",
+    "    \"Churn\",\n",
     "]"
    ]
   },
@@ -1037,7 +1080,7 @@
    ],
    "source": [
     "churn_final_df = pd.read_csv(url_data, usecols=columns_to_use, low_memory=False)\n",
-    "churn_final_df.info()\n"
+    "churn_final_df.info()"
    ]
   },
   {
