--- a/notebooks/data_exploration_description.ipynb
+++ b/notebooks/data_exploration_description.ipynb
@@ -31,10 +31,11 @@
    "source": [
     "# base libraries for data science\n",
     "from pathlib import Path\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pyarrow as pa\n",
-    "import matplotlib.pyplot as plt"
+    "import pyarrow as pa"
    ]
   },
   {
@@ -109,7 +110,7 @@
    ],
    "source": [
     "# Ajustar la configuración para mostrar todas las columnas\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
     "churn_df.info()"
    ]
   },
@@ -635,7 +636,7 @@
     }
    ],
    "source": [
-    "nans = ['NA', 'N/A', 'null', 'NULL', 'nan', 'NaN', '', ' ', '?']\n",
+    "nans = [\"NA\", \"N/A\", \"null\", \"NULL\", \"nan\", \"NaN\", \"\", \" \", \"?\"]\n",
     "for col in churn_df.columns:\n",
     "    if len(churn_df[churn_df[col].isin(nans)]) > 0:\n",
     "        print(f\"Weird Nan representation found for column {col}\")"
@@ -680,6 +681,7 @@
     "def porcentaje_nulos(df, columna):\n",
     "    return df[columna].isnull().mean() * 100\n",
     "\n",
+    "\n",
     "for col in churn_df.columns:\n",
     "    porcentaje = porcentaje_nulos(churn_df, col)\n",
     "    print(f\"El {porcentaje:.2f}% de los valores en '{col}' son nulos.\")"
@@ -699,8 +701,9 @@
    "outputs": [],
    "source": [
     "def reemplazar_nulos(df):\n",
-    "    valores_nulos = ['NA', 'N/A', 'null', 'NULL', 'nan', 'NaN', '', ' ', '?']\n",
+    "    valores_nulos = [\"NA\", \"N/A\", \"null\", \"NULL\", \"nan\", \"NaN\", \"\", \" \", \"?\"]\n",
     "    return df.replace(valores_nulos, np.nan)\n",
+    "\n",
     "\n",
     "churn_df = reemplazar_nulos(churn_df)"
    ]
@@ -722,7 +725,7 @@
     }
    ],
    "source": [
-    "churn_df['data_source'].unique()"
+    "churn_df[\"data_source\"].unique()"
    ]
   },
   {
@@ -742,7 +745,7 @@
     }
    ],
    "source": [
-    "churn_df['value'].unique()"
+    "churn_df[\"value\"].unique()"
    ]
   },
   {
@@ -796,7 +799,7 @@
     }
    ],
    "source": [
-    "churn_df = churn_df.drop(columns=['data_source', 'customerID', 'value'])\n",
+    "churn_df = churn_df.drop(columns=[\"data_source\", \"customerID\", \"value\"])\n",
     "churn_df.info()"
    ]
   },
@@ -855,10 +858,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_categoric = ['StreamingMovies', 'InternetService',\n",
-    "       'StreamingTV', 'OnlineSecurity', 'MultipleLines',\n",
-    "       'DeviceProtection', 'TechSupport', 'gender ', 'OnlineBackup', 'PaymentMethod',\n",
-    "       'Contract']\n",
+    "cols_categoric = [\n",
+    "    \"StreamingMovies\",\n",
+    "    \"InternetService\",\n",
+    "    \"StreamingTV\",\n",
+    "    \"OnlineSecurity\",\n",
+    "    \"MultipleLines\",\n",
+    "    \"DeviceProtection\",\n",
+    "    \"TechSupport\",\n",
+    "    \"gender \",\n",
+    "    \"OnlineBackup\",\n",
+    "    \"PaymentMethod\",\n",
+    "    \"Contract\",\n",
+    "]\n",
     "churn_df[cols_categoric] = churn_df[cols_categoric].astype(\"category\")"
    ]
   },
@@ -929,11 +941,16 @@
     }
    ],
    "source": [
-    "cols_boolean=['SeniorCitizen', 'Partner', 'Dependents', 'PhoneService', 'PaperlessBilling', 'Churn']\n",
+    "cols_boolean = [\n",
+    "    \"SeniorCitizen\",\n",
+    "    \"Partner\",\n",
+    "    \"Dependents\",\n",
+    "    \"PhoneService\",\n",
+    "    \"PaperlessBilling\",\n",
+    "    \"Churn\",\n",
+    "]\n",
     "for col in cols_boolean:\n",
-    "    churn_df[col].value_counts().plot(\n",
-    "        kind=\"bar\", title = f\"{col} value counts\"\n",
-    "    )\n",
+    "    churn_df[col].value_counts().plot(kind=\"bar\", title=f\"{col} value counts\")\n",
     "    plt.show()"
    ]
   },
@@ -943,8 +960,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "churn_df['PhoneService'] = churn_df['PhoneService'].replace('1324134', np.nan)\n",
-    "cols_boolean=['Partner', 'Dependents', 'PhoneService', 'PaperlessBilling', 'Churn']\n",
+    "churn_df[\"PhoneService\"] = churn_df[\"PhoneService\"].replace(\"1324134\", np.nan)\n",
+    "cols_boolean = [\"Partner\", \"Dependents\", \"PhoneService\", \"PaperlessBilling\", \"Churn\"]\n",
     "for col in cols_boolean:\n",
     "    churn_df[col] = churn_df[col].map({\"Yes\": 1, \"No\": 0})"
    ]
@@ -1016,11 +1033,16 @@
     }
    ],
    "source": [
-    "cols_boolean=['SeniorCitizen', 'Partner', 'Dependents', 'PhoneService', 'PaperlessBilling', 'Churn']\n",
+    "cols_boolean = [\n",
+    "    \"SeniorCitizen\",\n",
+    "    \"Partner\",\n",
+    "    \"Dependents\",\n",
+    "    \"PhoneService\",\n",
+    "    \"PaperlessBilling\",\n",
+    "    \"Churn\",\n",
+    "]\n",
     "for col in cols_boolean:\n",
-    "    churn_df[col].value_counts().plot(\n",
-    "        kind=\"bar\", title = f\"{col} value counts\"\n",
-    "    )\n",
+    "    churn_df[col].value_counts().plot(kind=\"bar\", title=f\"{col} value counts\")\n",
     "    plt.show()"
    ]
   },
@@ -1030,7 +1052,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_boolean = ['SeniorCitizen', 'Partner', 'Dependents', 'PhoneService', 'PaperlessBilling', 'Churn']\n",
+    "cols_boolean = [\n",
+    "    \"SeniorCitizen\",\n",
+    "    \"Partner\",\n",
+    "    \"Dependents\",\n",
+    "    \"PhoneService\",\n",
+    "    \"PaperlessBilling\",\n",
+    "    \"Churn\",\n",
+    "]\n",
     "churn_df[cols_boolean] = churn_df[cols_boolean].astype(\"category\")"
    ]
   },
@@ -1101,11 +1130,9 @@
     }
    ],
    "source": [
-    "cat_cols=['SeniorCitizen', 'Partner', 'Dependents', 'PhoneService', 'PaperlessBilling', 'Churn']\n",
+    "cat_cols = [\"SeniorCitizen\", \"Partner\", \"Dependents\", \"PhoneService\", \"PaperlessBilling\", \"Churn\"]\n",
     "for col in cat_cols:\n",
-    "    churn_df[col].value_counts().plot(\n",
-    "        kind=\"bar\", title = f\"{col} value counts\"\n",
-    "    )\n",
+    "    churn_df[col].value_counts().plot(kind=\"bar\", title=f\"{col} value counts\")\n",
     "    plt.show()"
    ]
   },
@@ -1115,18 +1142,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_numeric_float = ['MonthlyCharges', 'TotalCharges']\n",
+    "cols_numeric_float = [\"MonthlyCharges\", \"TotalCharges\"]\n",
     "churn_df[cols_numeric_float] = churn_df[cols_numeric_float].astype(\"float\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Esta columna posee valores np.nan por lo que la convertiremos en int en otro momento donde hayamos tratado los nulos\n",
-    "cols_numeric_float = ['tenure']\n",
+    "# Esta columna posee valores np.nan por lo que la convertiremos en int en\n",
+    "# otro momento donde hayamos tratado los nulos\n",
+    "cols_numeric_float = [\"tenure\"]\n",
     "churn_df[cols_numeric_float] = churn_df[cols_numeric_float].astype(\"float\")"
    ]
   },
@@ -1189,9 +1217,7 @@
    "outputs": [],
    "source": [
     "DATA_DIR = BASE_DIR / \"data\" / \"interim\"\n",
-    "churn_df.to_parquet(\n",
-    "    DATA_DIR / \"churn_type_fixed.parquet\", index=False, schema=schema\n",
-    ")"
+    "churn_df.to_parquet(DATA_DIR / \"churn_type_fixed.parquet\", index=False, schema=schema)"
    ]
   },
   {
