fix(model-selection): arreglar la calidad del código con el pre-commit

--- a/notebooks/model_selection.ipynb
+++ b/notebooks/model_selection.ipynb
@@ -23,54 +23,47 @@
     "# Librerías para este notebook\n",
     "\n",
     "# Librerías básicas y del sistema\n",
-    "from pathlib import Path\n",
     "import warnings\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
     "# Visualización\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "# Preprocesamiento de datos\n",
     "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
-    "\n",
-    "# Modelo y transformaciones de datos\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.base import BaseEstimator, ClassifierMixin\n",
-    "\n",
-    "# División de datos y validación\n",
-    "from sklearn.model_selection import (\n",
-    "    train_test_split,\n",
-    "    GridSearchCV,\n",
-    "    RandomizedSearchCV,\n",
-    "    cross_val_score,\n",
-    "    StratifiedKFold,\n",
-    "    ShuffleSplit,\n",
-    "    learning_curve,\n",
-    ")\n",
     "\n",
     "# Algoritmos de clasificación\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "# Métricas de evaluación\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score,\n",
+    "    classification_report,\n",
+    "    f1_score,\n",
     "    precision_score,\n",
     "    recall_score,\n",
-    "    f1_score,\n",
-    "    confusion_matrix,\n",
-    "    classification_report,\n",
-    "    roc_curve,\n",
-    "    auc,\n",
     "    roc_auc_score,\n",
     ")\n",
+    "\n",
+    "# División de datos y validación\n",
+    "from sklearn.model_selection import (\n",
+    "    GridSearchCV,\n",
+    "    ShuffleSplit,\n",
+    "    StratifiedKFold,\n",
+    "    cross_val_score,\n",
+    "    learning_curve,\n",
+    "    train_test_split,\n",
+    ")\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Modelo y transformaciones de datos\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Configuración\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -344,7 +337,7 @@
     "]\n",
     "churn_df[cols_categoric] = churn_df[cols_categoric].astype(\"category\")\n",
     "\n",
-    "churn_df.drop_duplicates(inplace=True, keep=\"first\")\n"
+    "churn_df.drop_duplicates(inplace=True, keep=\"first\")"
    ]
   },
   {
@@ -390,7 +383,7 @@
     "\n",
     "churn_features = churn_df[selected_features]\n",
     "\n",
-    "churn_features.info()\n"
+    "churn_features.info()"
    ]
   },
   {
@@ -467,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +528,7 @@
     "    X[existing_cols_boolean] = X[existing_cols_boolean].astype(\"category\")\n",
     "    X[existing_cols_categoric] = X[existing_cols_categoric].astype(\"category\")\n",
     "\n",
-    "    return X\n"
+    "    return X"
    ]
   },
   {
@@ -581,7 +574,7 @@
     "        (\"numericas\", numeric_pipe, cols_numeric),\n",
     "        (\"categoricas nominales\", categorical_pipe, cols_categoric),\n",
     "    ]\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1163,12 +1156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "FEATURES = list(x_train.columns)\n",
-    "FEATURES\n",
     "FEATURES = [col for col in x_train.columns if col != \"Churn\"]"
    ]
   },
@@ -1228,12 +1220,12 @@
     "for model_name, model in models.items():\n",
     "    print(f\"Training {model_name}...\")\n",
     "    result_dict[model_name] = build_model(model, preprocessor, data_params)\n",
-    "    print(f\"{model_name} completed.\\n\")\n"
+    "    print(f\"{model_name} completed.\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1336,12 +1328,12 @@
     "        ax.text(i, bar_center, label, ha=\"center\", va=\"center_baseline\", rotation=45)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1396,7 @@
     "]\n",
     "\n",
     "print(f\"Models with overfitting: {list(overfitting_models.index)} \")\n",
-    "print(f\"Models with low performance: {list(low_performance_models.index)} \")\n"
+    "print(f\"Models with low performance: {list(low_performance_models.index)} \")"
    ]
   },
   {
@@ -1433,7 +1425,7 @@
     "\n",
     "print(\n",
     "    f\"Models with similar performance in train and test: {list(similar_performance_models.index)}\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1677,7 +1669,7 @@
     }
    ],
    "source": [
-    "similar_performance_models\n"
+    "similar_performance_models"
    ]
   },
   {
@@ -1738,12 +1730,12 @@
     "        )\n",
     "\n",
     "# Convert results into a pandas DataFrame for each metric\n",
-    "cv_results_df = {metric: pd.DataFrame(cv_results[metric]) for metric in scoring_metrics}\n"
+    "cv_results_df = {metric: pd.DataFrame(cv_results[metric]) for metric in scoring_metrics}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2011,7 @@
     "    cv_results_df[metric_name].boxplot()\n",
     "    plt.title(f\"Cross Validation Boxplot for {metric_name.capitalize()}\")\n",
     "    plt.ylabel(f\"{metric_name.capitalize()}\")\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -2235,7 +2227,7 @@
     "    print(\n",
     "        \"There is no statistically significant difference \"\n",
     "        \"in the cross-validation results of the models.\"\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -2298,7 +2290,7 @@
     "    n_jobs=-1,\n",
     "    return_train_score=True,\n",
     ")\n",
-    "# grid_search.fit(x_train, y_train)\n"
+    "# grid_search.fit(x_train, y_train)"
    ]
   },
   {
@@ -2381,7 +2373,7 @@
     "    n_jobs=-1,\n",
     "    return_train_score=True,\n",
     ")\n",
-    "# grid_search.fit(x_train, y_train)\n"
+    "# grid_search.fit(x_train, y_train)"
    ]
   },
   {
@@ -2429,7 +2421,7 @@
     "y_pred = gb_model.predict(x_test)\n",
     "\n",
     "# Evaluar modelo\n",
-    "summarize_classification(y_test, y_pred)\n"
+    "summarize_classification(y_test, y_pred)"
    ]
   },
   {
@@ -2463,7 +2455,7 @@
     "    n_jobs=-1,\n",
     "    return_train_score=True,\n",
     ")\n",
-    "# grid_search.fit(x_train, y_train)\n"
+    "# grid_search.fit(x_train, y_train)"
    ]
   },
   {
@@ -2515,7 +2507,7 @@
     "y_pred = svm_model.predict(x_test)\n",
     "\n",
     "# Evaluar modelo\n",
-    "summarize_classification(y_test, y_pred)\n"
+    "summarize_classification(y_test, y_pred)"
    ]
   },
   {
@@ -2622,7 +2614,7 @@
     }
    ],
    "source": [
-    "PrecisionRecallDisplay.from_predictions(y_test, y_pred)\n"
+    "PrecisionRecallDisplay.from_predictions(y_test, y_pred)"
    ]
   },
   {
@@ -2643,7 +2635,7 @@
    ],
    "source": [
     "log_plot = RocCurveDisplay.from_estimator(logistic_model, x_test, y_test)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -2700,7 +2692,7 @@
     }
    ],
    "source": [
-    "ConfusionMatrixDisplay.from_predictions(y_test, y_pred)\n"
+    "ConfusionMatrixDisplay.from_predictions(y_test, y_pred)"
    ]
   },
   {
@@ -2730,7 +2722,7 @@
     }
    ],
    "source": [
-    "PrecisionRecallDisplay.from_predictions(y_test, y_pred)\n"
+    "PrecisionRecallDisplay.from_predictions(y_test, y_pred)"
    ]
   },
   {
@@ -2751,7 +2743,7 @@
    ],
    "source": [
     "gb_plot = RocCurveDisplay.from_estimator(gb_model, x_test, y_test)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -2778,7 +2770,7 @@
    "source": [
     "# SVM\n",
     "y_pred = svm_model.predict(x_test)\n",
-    "print(classification_report(y_test, y_pred))\n"
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -2838,7 +2830,7 @@
     }
    ],
    "source": [
-    "PrecisionRecallDisplay.from_predictions(y_test, y_pred)\n"
+    "PrecisionRecallDisplay.from_predictions(y_test, y_pred)"
    ]
   },
   {
@@ -2893,7 +2885,7 @@
     "log_plot.plot(ax=ax, alpha=0.8, name=\"logistic regression\")\n",
     "svm_plot.plot(ax=ax, alpha=0.8, name=\"svm\")\n",
     "plt.title(\"ROC Curve - Gradient Boosting vs Logistic Regression vs svm\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -2907,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2987,7 +2979,7 @@
     "print(\"Training Scores Mean:\", train_mean)\n",
     "print(\"Training Scores Std:\", train_std)\n",
     "print(\"Test Scores Mean:\", test_mean)\n",
-    "print(\"Test Scores Std:\", test_std)\n"
+    "print(\"Test Scores Std:\", test_std)"
    ]
   },
   {
@@ -3088,7 +3080,7 @@
     "# Guardar el modelo entrenado\n",
     "dump(svm_model, model_path)\n",
     "\n",
-    "print(f\"Modelo guardado en: {model_path}\")\n"
+    "print(f\"Modelo guardado en: {model_path}\")"
    ]
   },
   {
@@ -3099,7 +3091,7 @@
    "source": [
     "from joblib import load\n",
     "\n",
-    "my_model = load(\"Churn_classification-SVM-v1.joblib\")\n"
+    "my_model = load(\"Churn_classification-SVM-v1.joblib\")"
    ]
   },
   {
