--- a/notebooks/model_selection.ipynb
+++ b/notebooks/model_selection.ipynb
@@ -475,8 +475,7 @@
     "    \"\"\"\n",
     "    assert isinstance(X, pd.DataFrame)\n",
     "    mask = ~(\n",
-    "        (X[\"MonthlyCharges\"] > MIN_MONTHLY_CHARGE)\n",
-    "        & (X[\"MonthlyCharges\"] < MAX_MONTHLY_CHARGE)\n",
+    "        (X[\"MonthlyCharges\"] > MIN_MONTHLY_CHARGE) & (X[\"MonthlyCharges\"] < MAX_MONTHLY_CHARGE)\n",
     "    )\n",
     "    X.loc[mask, \"MonthlyCharges\"] = np.nan\n",
     "    return X\n",
@@ -1284,12 +1283,10 @@
     "metrics = [\"accuracy\", \"precision\", \"recall\", \"f1\", \"roc\"]\n",
     "models = list(result_dict.keys())\n",
     "data_train = {\n",
-    "    metric: {model: result_dict[model][\"train\"][metric] for model in models}\n",
-    "    for metric in metrics\n",
+    "    metric: {model: result_dict[model][\"train\"][metric] for model in models} for metric in metrics\n",
     "}\n",
     "data_test = {\n",
-    "    metric: {model: result_dict[model][\"test\"][metric] for model in models}\n",
-    "    for metric in metrics\n",
+    "    metric: {model: result_dict[model][\"test\"][metric] for model in models} for metric in metrics\n",
     "}\n",
     "\n",
     "df_train = pd.DataFrame(data_train)\n",
@@ -1300,12 +1297,8 @@
     "    fig, ax = plt.subplots(figsize=(10, 4))\n",
     "    width = 0.35  # the width of the bars\n",
     "\n",
-    "    df_train[metric].plot(\n",
-    "        kind=\"bar\", ax=ax, width=width, position=1, label=\"Train\", color=\"blue\"\n",
-    "    )\n",
-    "    df_test[metric].plot(\n",
-    "        kind=\"bar\", ax=ax, width=width, position=0, label=\"Test\", color=\"orange\"\n",
-    "    )\n",
+    "    df_train[metric].plot(kind=\"bar\", ax=ax, width=width, position=1, label=\"Train\", color=\"blue\")\n",
+    "    df_test[metric].plot(kind=\"bar\", ax=ax, width=width, position=0, label=\"Test\", color=\"orange\")\n",
     "\n",
     "    # Add horizontal lines for average performance\n",
     "    avg_train = df_train[metric].mean()\n",
@@ -1347,17 +1340,11 @@
    ],
    "source": [
     "# Create a DataFrame combining df_train and df_test\n",
-    "df_combined = pd.concat(\n",
-    "    [df_train.add_suffix(\"_train\"), df_test.add_suffix(\"_test\")], axis=1\n",
-    ")\n",
+    "df_combined = pd.concat([df_train.add_suffix(\"_train\"), df_test.add_suffix(\"_test\")], axis=1)\n",
     "\n",
     "# Calculate the difference between train and test values\n",
-    "df_combined[\"accuracy_diff\"] = (\n",
-    "    df_combined[\"accuracy_train\"] - df_combined[\"accuracy_test\"]\n",
-    ")\n",
-    "df_combined[\"precision_diff\"] = (\n",
-    "    df_combined[\"precision_train\"] - df_combined[\"precision_test\"]\n",
-    ")\n",
+    "df_combined[\"accuracy_diff\"] = df_combined[\"accuracy_train\"] - df_combined[\"accuracy_test\"]\n",
+    "df_combined[\"precision_diff\"] = df_combined[\"precision_train\"] - df_combined[\"precision_test\"]\n",
     "df_combined[\"recall_diff\"] = df_combined[\"recall_train\"] - df_combined[\"recall_test\"]\n",
     "df_combined[\"f1_diff\"] = df_combined[\"f1_train\"] - df_combined[\"f1_test\"]\n",
     "df_combined[\"roc_diff\"] = df_combined[\"roc_train\"] - df_combined[\"roc_test\"]\n",
@@ -1947,12 +1934,14 @@
     "    for model_name in models:\n",
     "        mean_score = cv_results_df[metric_name][model_name].mean()\n",
     "        std_score = cv_results_df[metric_name][model_name].std()\n",
-    "        mean_std_data.append({\n",
-    "            \"Model\": model_name,\n",
-    "            \"Metric\": metric_name,\n",
-    "            \"Mean\": mean_score,\n",
-    "            \"Std\": std_score,\n",
-    "        })\n",
+    "        mean_std_data.append(\n",
+    "            {\n",
+    "                \"Model\": model_name,\n",
+    "                \"Metric\": metric_name,\n",
+    "                \"Mean\": mean_score,\n",
+    "                \"Std\": std_score,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "mean_std_df = pd.DataFrame(mean_std_data)\n",
     "mean_std_df"
@@ -2961,9 +2950,7 @@
     "ax.plot(train_sizes, train_mean, \"o-\", label=\"Training score\")\n",
     "ax.plot(train_sizes, test_mean, \"o-\", color=\"orange\", label=\"Cross-validation score\")\n",
     "ax.fill_between(train_sizes, train_mean - train_std, train_mean + train_std, alpha=0.3)\n",
-    "ax.fill_between(\n",
-    "    train_sizes, test_mean - test_std, test_mean + test_std, alpha=0.3, color=\"orange\"\n",
-    ")\n",
+    "ax.fill_between(train_sizes, test_mean - test_std, test_mean + test_std, alpha=0.3, color=\"orange\")\n",
     "\n",
     "# Configure the title and labels\n",
     "ax.set_title(f\"Learning Curve for {model.__class__.__name__}\")\n",
